clang/test/BSC/Negative/Ownership/RuleCheck/Maple/endscope/endscope.cbs
// RUN: %clang_cc1 -verify %s

struct C {
    int * _Owned a;
    int * _Owned b;
};

struct B {
    int * _Owned a;
    int * _Owned b;
    struct C * _Owned c;
};

struct A {
    struct B b;
    struct B * _Owned c;
    struct B d;
    struct A *f;
};

void func1(struct A a) {} // expected-error {{field memory leak of value: `a`, a.b.a, a.b.b, a.b.c, a.b.c.a, a.b.c.b, a.c, a.c.a, a.c.b, a.c.c... are leak}}

void func(struct A a) {
    int * x = __move_to_raw(a.b.a);
} // expected-error {{field memory leak of value: `a`, a.b.b, a.b.c, a.b.c.a, a.b.c.b, a.c, a.c.a, a.c.b, a.c.c, a.c.c.a... are leak}}

void func2(struct A * _Owned a) {
    int *b = __move_to_raw(a->b.a);
} // expected-error {{memory leak of value: `a`}}
  // expected-error@-1 {{field memory leak of value: `a`, a.b.b, a.b.c, a.b.c.a, a.b.c.b, a.c, a.c.a, a.c.b, a.c.c, a.c.c.a... are leak}}

void endscope_0(int * _Owned * _Owned * _Owned a, int *b) {} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}}

void endscope_00(int * _Owned * _Owned * _Owned a, int *b) {
    int c = ***a;
} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}}

void endscope_1(int * _Owned * _Owned * _Owned a) {
    {}
} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}}

void endscope_2(int * _Owned * _Owned * _Owned a) {
    return;
} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}}

void endscope_3(int * _Owned * _Owned * _Owned a) {
    int * _Owned * _Owned * _Owned b = a;
} // expected-error {{memory leak of value: `b`}} expected-error {{field memory leak of value: `b`, *b, **b are leak}}

void endscope_4(int * _Owned * _Owned * _Owned a) {
    int * _Owned * _Owned * _Owned b = a;
    *b; // expected-warning {{expression result unused}}
} // expected-error {{memory leak of value: `b`}} expected-error {{field memory leak of value: `b`, *b, **b are leak}}

__attribute__((__noinline__))
void * _Owned VoidPtrOwned() {
    void * _Owned a;
    return a; // expected-error {{use of uninitialized value: `a`}}
}

void endscope_5() {
    if (1) {
        void * _Owned c = VoidPtrOwned();
        void * _Owned d = VoidPtrOwned();
        void * _Owned e = VoidPtrOwned();
    } // expected-error {{memory leak of value: `e`}} expected-error {{memory leak of value: `d`}} expected-error {{memory leak of value: `c`}}
}

void endscope_6(int * _Owned * _Owned * _Owned a, int * _Owned * _Owned * _Owned b) {
    if (1) {
        void * _Owned c = VoidPtrOwned();
        void * _Owned d = VoidPtrOwned();
        void * _Owned e = VoidPtrOwned();
        void * x = __move_to_raw(c);
        x = __move_to_raw(d);
        x = __move_to_raw(e);
        return;
    }
    return;
} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}} expected-error {{memory leak of value: `b`}} expected-error {{field memory leak of value: `b`, *b, **b are leak}}